# ai-quant-platform

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
docs/: API_AUDIT.md  INDEX.md  MARKET_DATA_SOURCE_AUDIT.md  OVERVIEW.md  SYSTEM_DESIGN_RESEARCH.md  UI_FUNCTION_MATRIX.md  futu_environment_setup.md  futu_frontend_backend_integration_report.md  futu_integration_design.md  futu_market_data_provider.md  futu_options_data_provider.md  futu_troubleshooting.md  options_screener_api.md  options_screener_learning.md  phase_0_architecture.md  phase_0_delivery.md  phase_0_execution.md  phase_0_learning.md  phase_11_design_spec.md  phase_11_next_roadmap.md  polymarket_charts_and_metrics.md  polymarket_read_only_integration.md  polymarket_troubleshooting.md
scripts/: check_api_keys.py  refresh_earnings_calendar.py  refresh_options_universe.py  refresh_vix_history.py  run_options_radar.ps1  run_spy_qqq_phase5_full_check.py  start_phase9_full_stack.ps1  stop_phase9_full_stack.ps1  verify_futu_connection.py
tests/: test_agent_phase7.py  test_api_agent.py  test_api_agent_llm_config.py  test_api_backtest.py  test_api_cors.py  test_api_data.py  test_api_data_provider_param.py  test_api_factors.py  test_api_health.py  test_api_market_data_futu.py  test_api_options_buy_side.py  test_api_options_futu.py  test_api_options_radar.py  test_api_paper.py  test_api_prediction_market.py  test_api_safety.py  test_backtest_broker_portfolio.py  test_backtest_engine_metrics.py  test_backtest_storage_reporting_cli.py  test_backtest_strategy_orders.py  test_cli.py  (+54 more)
(+290 files in other folders)
