[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-system"
version = "0.1.0"
description = "AI-assisted quant research, backtesting, and paper-trading platform foundation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "AI Quant Platform Team" }
]
dependencies = [
  "duckdb>=0.10",
  "numpy>=1.26,<2",
  "pandas>=2.1,<3",
  "pyarrow>=14",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
prediction_market = [
  "scipy>=1.11",
]

[project.scripts]
quant-system = "quant_system.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
